--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,26 @@
     margin-right: 2em;
  }
 .flex-container {
+    display: -webkit-box;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    -webkit-box-pack: center;
+            justify-content: center;
     align-content: space-around;
-    align-items: stretch;
+    -webkit-box-align: stretch;
+            align-items: stretch;
 }
 .viz {
     width: 100%;
 }
 .intro-column {
-    flex: 1;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+            flex: 1;
+    -webkit-box-flex: 1;
+            flex-grow: 1;
     text-align: justify;
     margin-left: 1em;
     margin-right: 1em;
@@ -26,14 +33,17 @@
 #corpus {
     justify-content: space-around;
     align-content: space-around;
-    align-items: space-around;
+    -webkit-box-align: space-around;
+            align-items: space-around;
 }
 #atlas {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+            flex-grow: 1;
     flex: 1;
 }
 #abacus {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+            flex-grow: 1;
     flex: 1;
     margin-top: 1em;
     padding-top: 1em;
@@ -42,29 +52,37 @@
     margin: 0 2.5rem;
 }
 #compass {
-    justify-content: flex-start;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
     padding-left: 20%;
 }
 #oculus {
-    align-items: stretch;
+    -webkit-box-align: stretch;
+            align-items: stretch;
 }
 #locus {
-    flex: 0 2 65%;
-    order: 2;
+    -webkit-box-flex: 0;
+            flex: 0 2 65%;
+    -webkit-box-ordinal-group: 3;
+            order: 2;
     flex-wrap: nowrap;
     justify-content: space-around;
 }
 #locus .phase {
-    flex: 1;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+            flex: 1;
+    -webkit-box-flex: 1;
+            flex-grow: 1;
     text-align: center;
 }
 #locus h5 {
     font-weight: bold;
 }
 #focus {
-    flex: 0 1.2 35%;
-    order: 1;
+    -webkit-box-flex: 0;
+            flex: 0 1.2 35%;
+    -webkit-box-ordinal-group: 2;
+            order: 1;
 }
 #focus .details {
     margin: auto;
@@ -74,20 +92,25 @@
 @media screen and (max-width: 767px) {
     .flex-container,
     #intro {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+                flex-direction: column;
     }
     #locus {
         flex-wrap: wrap;
-        order: 1;
+        -webkit-box-ordinal-group: 2;
+                order: 1;
     }
     #focus {
-        order: 2;
+        -webkit-box-ordinal-group: 3;
+                order: 2;
     }
 }
 /*
  * Viz
  */
 text, rect, g {
+    -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
 .click-target {
@@ -95,6 +118,7 @@ text, rect, g {
     pointer-events: all;
 }
 use {
+    -webkit-transition: stroke 0.5s ease, stroke-width 0.5s ease, opacity 0.5s ease;
     transition: stroke 0.5s ease, stroke-width 0.5s ease, opacity 0.5s ease;
     fill: #4d4d4d;
     stroke: azure;
@@ -116,42 +140,68 @@ use {
     opacity: 0;
 }
 .legend {
+    display: -webkit-box;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
     align-content: space-between;
 }
 .legend-row {
-    flex: 1;
+    -webkit-box-flex: 1;
+            flex: 1;
+    display: -webkit-box;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
     list-style-type: none;
+
+    -webkit-transition: all 0.5s ease-in-out;
 
     transition: all 0.5s ease-in-out;
 }
 .legend-item {
-    flex: 1;
+    -webkit-box-flex: 1;
+            flex: 1;
+    display: -webkit-box;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
     align-content: space-between;
+
+    -webkit-transition: all 500ms linear;
 
     transition: all 500ms linear;
 }
 .legend-bar-container {
-    flex: 1;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+            flex: 1;
+    -webkit-box-flex: 1;
+            flex-grow: 1;
     flex-shrink: 1.5;
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+            order: 1;
+    display: -webkit-inline-box;
     display: inline-flex;
-    flex-direction: row-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+            flex-direction: row-reverse;
     cursor: pointer;
 
 }
 .legend-label-container {
-    flex: 1;
-    flex-grow: 1.5;
-    order: 2;
+    -webkit-box-flex: 1;
+            flex: 1;
+    -webkit-box-flex: 1.5;
+            flex-grow: 1.5;
+    -webkit-box-ordinal-group: 3;
+            order: 2;
     flex-wrap: nowrap;
     overflow: visible;
             flex-shrink: 0;
@@ -159,10 +209,13 @@ use {
 .legend-bar {
     border: 1px solid white;
 
+    -webkit-transition: width 0.5s ease-in-out;
+
     transition: width 0.5s ease-in-out;
 }
 .kids {
-    flex: 0;
+    -webkit-box-flex: 0;
+            flex: 0;
     padding: 0;
 }
 .legend-label--text {
@@ -187,13 +240,26 @@ use {
 .legend-row--new {
     max-height: 0;
     opacity: 0;
-    animation:
+    -webkit-animation:
       openSpace 0.5s ease forwards,
       moveIn 0.3s 0.2s ease forwards;
+            animation:
+      openSpace 0.5s ease forwards,
+      moveIn 0.3s 0.2s ease forwards;
+}
+@-webkit-keyframes openSpace {
+    to {
+        max-height: 120px;
+    }
 }
 @keyframes openSpace {
     to {
         max-height: 120px;
+    }
+}
+@-webkit-keyframes moveIn {
+    to {
+        opacity: 1;
     }
 }
 @keyframes moveIn {
@@ -204,13 +270,26 @@ use {
 .legend-row--remove {
     max-height: 120px;
     opacity: 1;
-    animation:
+    -webkit-animation:
       moveOut 0.3s 0.2s ease forwards,
       closeSpace 0.5s ease forwards;
+            animation:
+      moveOut 0.3s 0.2s ease forwards,
+      closeSpace 0.5s ease forwards;
+}
+@-webkit-keyframes closeSpace {
+    to {
+        max-height: 0;
+    }
 }
 @keyframes closeSpace {
     to {
         max-height: 0;
+    }
+}
+@-webkit-keyframes moveOut {
+    to {
+        opacity: 0;
     }
 }
 @keyframes moveOut {
@@ -227,6 +306,9 @@ path.domain, .tick line {
     text-align: center;
 }
 #locus li {
+    -webkit-transition: background-color 0.5s ease,
+        color 0.5s ease,
+        opacity 0.5s linear;
     transition: background-color 0.5s ease,
         color 0.5s ease,
         opacity 0.5s linear;
