--- a/css/colors.css
+++ b/css/colors.css
@@ -64,10 +64,34 @@
  */
 .confirmation {
     fill: #fdae61;
+    background:
+      -webkit-repeating-linear-gradient(340deg, #fdae61, #fdae61 3px, rgba(255,255,255,0) 3px, rgba(255,255,255,0) 10px);
+    background:
+      repeating-linear-gradient(110deg, #fdae61, #fdae61 3px, rgba(255,255,255,0) 3px, rgba(255,255,255,0) 10px);
+    background-color: #fff;
+}
+#locus li.confirmation {
     background-color: #fdae61;
+}
+.legislative {
+    background:
+        -webkit-repeating-linear-gradient(340deg, #fdae61, #fdae61 3px, rgba(255,255,255,0) 3px, rgba(255,255,255,0) 10px);
+    background:
+        repeating-linear-gradient(110deg, #fdae61, #fdae61 3px, rgba(255,255,255,0) 3px, rgba(255,255,255,0) 10px);
+    background-color: #fff;
+}
+.other {
+    background:
+      -webkit-repeating-linear-gradient(80deg, #fdae61, #fdae61 3px, rgba(255,255,255,0) 3px, rgba(255,255,255,0) 10px);
+    background:
+      repeating-linear-gradient(10deg, #fdae61, #fdae61 3px, rgba(255,255,255,0) 3px, rgba(255,255,255,0) 10px);
+    background-color: #fff;
 }
 /* Base color */
 .not_applicable {
     fill: gray;
     background-color: gray;
+}
+.blank {
+    fill: white;
 }
