Concatenate the vendor css and js files.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,7 @@
     <link rel="shortcut icon" href="http://www.brennancenter.org/sites/all/themes/bcj-zen/favicon.ico" type="image/vnd.microsoft.icon" />
 
   <!-- Minimal Bootstrap -->
-    <link href="css/vendor/bootstrap.min.css" rel="stylesheet" type="text/css">
-
-  <!-- Fonts -->
-    <link href="css/vendor/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="css/vendors.css" rel="stylesheet" type="text/css">
 
   <!-- Visualization stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -103,11 +100,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
 
-    <script src="js/vendor/lodash.min.js" charset="utf-8"></script>
-    <script src="js/vendor/queue.min.js" charset="utf-8"></script>
-    <script src="js/vendor/topojson.min.js" charset="utf-8"></script>
-    <script src="js/vendor/d3.min.js" charset="utf-8"></script>
-
+    <script src="js/vendors.js" charset="utf-8"></script>
     <script src="js/cats.min.js" charset="utf-8"></script>
   </body>
 </html>
