Move javascript includes after <body> and asynchronously load bootstrap and cats (but synchronously load their dependencies, jquery, and vendors)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,13 +94,10 @@
         </small>
       </p>
     </footer>
-
-
-    <!-- Auxiliary files needed for this viz -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
-
-    <script src="js/vendors.js" charset="utf-8"></script>
-    <script src="js/cats.min.js" charset="utf-8"></script>
   </body>
+  <!-- Auxiliary files needed for this viz -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+  <script async src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
+  <script src="js/vendors.js" charset="utf-8"></script>
+  <script async src="js/cats.min.js" charset="utf-8"></script>
 </html>
