--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,6 @@
   <!-- Favicon -->
     <link rel="shortcut icon" href="http://www.brennancenter.org/sites/all/themes/bcj-zen/favicon.ico" type="image/vnd.microsoft.icon" />
 
-  <!-- Minimal Bootstrap -->
-    <link href="css/vendors.css" rel="stylesheet" type="text/css">
-
-  <!-- Visualization stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-
   <!-- shims -->
     <!--HTML5 shim, for IE6-8 support of HTML5 elements-->
     <!--[if lt IE 9]>
@@ -94,10 +88,16 @@
         </small>
       </p>
     </footer>
+    <!-- Minimal Bootstrap -->
+    <link href="css/vendors.css" rel="stylesheet" type="text/css">
+
+    <!-- Visualization stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Auxiliary files needed for this viz -->
+    <script defer src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script defer src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
+    <script defer src="js/vendors.js" charset="utf-8"></script>
+    <script defer src="js/cats.min.js" charset="utf-8"></script>
   </body>
-  <!-- Auxiliary files needed for this viz -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-  <script async src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
-  <script src="js/vendors.js" charset="utf-8"></script>
-  <script async src="js/cats.min.js" charset="utf-8"></script>
 </html>
