Make the css links asynchronous

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,10 +89,9 @@
       </p>
     </footer>
     <!-- Minimal Bootstrap -->
-    <link href="css/vendors.css" rel="stylesheet" type="text/css">
-
+    <link async href="css/vendors.css" rel="stylesheet" type="text/css">
     <!-- Visualization stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link async href="css/style.css" rel="stylesheet">
 
     <!-- Auxiliary files needed for this viz -->
     <script defer src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
