--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,8 @@
     <title>Judicial Selections - Brennan Center for Justice</title>
   <!-- Favicon -->
     <link rel="shortcut icon" href="http://www.brennancenter.org/sites/all/themes/bcj-zen/favicon.ico" type="image/vnd.microsoft.icon" />
-
-  <!-- shims -->
-    <!--HTML5 shim, for IE6-8 support of HTML5 elements-->
-    <!--[if lt IE 9]>
-    <script async src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script async src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+    
+    {% include shims.html %}
   </head>
 
   <body id="page-top" class="index">
@@ -89,9 +84,9 @@
       </p>
     </footer>
     <!-- Minimal Bootstrap -->
-    <link async href="css/vendors.css" rel="stylesheet" type="text/css">
+    <link href="css/vendors.css" rel="stylesheet" type="text/css">
     <!-- Visualization stylesheet -->
-    <link async href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Auxiliary files needed for this viz -->
     <script defer src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
