--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Judicial Selection processes for all 50 states and DC. Covers all three state court levels: State Supreme Court, Intermediate Appellate Courts and Trial Courts.">
-    <meta name="author" content="Seemant Kulleen">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="author" content="{{ site.author.name }}">
 
-    <title>Judicial Selections - Brennan Center for Justice</title>
+    <title>{{ site.title }}</title>
   <!-- Favicon -->
     <link rel="shortcut icon" href="http://www.brennancenter.org/sites/all/themes/bcj-zen/favicon.ico" type="image/vnd.microsoft.icon" />
-    
+
     {% include shims.html %}
   </head>
 
