Use the optimised png logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body id="page-top" class="index">
     <article>
       <div class="page-header text-center">
-        <img src="http://www.brennancenter.org/sites/all/themes/bcj2-zen/images/bcj_logo.png"
+        <img src="/img/bcj_logo.png"
           alt="Brennan Center for Justice at NYU"
           class="img-responsive center-block"
         >
