--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
         </small>
       </p>
     </footer>
-    <script async>
+    <script defer>
         var cb = function() {
             var stylesheets = ['vendors.css', 'style.css'];
             stylesheets.forEach(function(css) {
