--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,7 @@
 ---
 ---
-@import "colors";
+{% include_relative vendor/bootstrap.min.css %}
+{% include_relative vendor/font-awesome.min.css %}
 
+@import "colors";
 @import "layout";
