Inline critical path css in _includes/critical_styles.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
         type="image/vnd.microsoft.icon"/>
 
     {% include shims.html %}
+    <style>
+      {% include critical_styles.css %}
+    </style>
   </head>
 
   <body id="page-top" class="index">
