--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,31 @@
 /*
  * Flexbox
  */
+ body {
+    margin-left: 2em;
+    margin-right: 2em;
+ }
+.flex-container {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+            justify-content: center;
+    align-content: space-around;
+    -webkit-box-align: baseline;
+            align-items: baseline;
+}
 
+.intro-column {
+    -webkit-box-flex: 1;
+            flex: 1 1 0%;
+    text-align: justify;
+    margin-left: 1em;
+    margin-right: 1em;
+}
 
 .viz--half {
     -webkit-box-flex: 0;
@@ -34,6 +58,9 @@
     -webkit-box-ordinal-group: 2;
             order: 1;
 }
+#corpus > * {
+	max-width: 100%;
+}
 #compass {
     -webkit-box-pack: start;
             justify-content: flex-start;
@@ -43,8 +70,8 @@
 }
 
 #oculus {
-  -webkit-box-ordinal-group: 6;
-          order: 5;
+    -webkit-box-ordinal-group: 6;
+            order: 5;
     -webkit-box-align: stretch;
             align-items: stretch;
 }
@@ -58,9 +85,7 @@
 }
 #locus .phase {
     -webkit-box-flex: 1;
-            flex: 1;
-    -webkit-box-flex: 1;
-            flex-grow: 1;
+            flex: 1 1 0%;
     text-align: center;
 }
 #locus h5 {
@@ -81,6 +106,12 @@
     padding: 2em;
 }
 @media screen and (max-width: 767px) {
+    .flex-container,
+    #intro {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+                flex-direction: column;
+    }
     .viz--half {
         -webkit-box-flex: 1;
                 flex: 1 0 100%;
@@ -139,12 +170,18 @@
         fill 0.5s ease,
         stroke 0.5s ease,
         stroke-width 0.5s ease;
+    stroke: azure;
+    stroke-width: 2px;
 }
-.state-icon {
+.clicked > path {
+    stroke: black;
+}
+#abacus .soften {
     opacity: 0.2;
 }
-.soften {
-    opacity: 0.2;
+.soften > path {
+  fill: azure;
+  stroke: darkgray;
 }
 .soften .overlay {
   opacity: 0;
@@ -161,7 +198,7 @@
 }
 .legend-row {
     -webkit-box-flex: 1;
-            flex: 1;
+            flex: 1 1 0%;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: vertical;
@@ -178,7 +215,7 @@
 }
 .legend-item {
     -webkit-box-flex: 1;
-            flex: 1;
+            flex: 1 1 0%;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: horizontal;
@@ -194,10 +231,11 @@
 }
 .legend-bar-container {
     -webkit-box-flex: 1;
-            flex: 1;
+            flex: 1 1 0%;
     -webkit-box-flex: 1;
             flex-grow: 1;
     flex-shrink: 1.5;
+	flex-basis: auto;
     -webkit-box-ordinal-group: 2;
             order: 1;
     display: -webkit-inline-box;
@@ -210,14 +248,15 @@
 }
 .legend-label-container {
     -webkit-box-flex: 1;
-            flex: 1;
+            flex: 1 1 0%;
     -webkit-box-flex: 1.5;
             flex-grow: 1.5;
     -webkit-box-ordinal-group: 3;
             order: 2;
     flex-wrap: nowrap;
     overflow: visible;
-            flex-shrink: 0;
+    flex-shrink: 0;
+	flex-basis: auto;
 }
 .legend-bar {
     border: 1px solid white;
@@ -228,7 +267,7 @@
 }
 .kids {
     -webkit-box-flex: 0;
-            flex: 0;
+            flex: 0 1 auto;
     padding: 0;
 }
 .legend-label--text {
