--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,144 +1,25 @@
-/*
- * Flexbox
- */
-
-
-.viz--half {
-    -webkit-box-flex: 0;
-            flex: 0 0 50%;
-    align-self: stretch;
-
-}
-#atlas {
-    -webkit-box-ordinal-group: 3;
-            order: 2;
-}
-#abacus {
-    margin-top: 1em;
-    padding-top: 1em;
-    -webkit-box-ordinal-group: 4;
-            order: 3;
-}
-.viz {
-    -webkit-box-flex: 1;
-            flex: 1 0 100%;
-}
-.askus {
-    margin: 0 2.5rem;
-    flex-wrap: nowrap;
-}
-#corpus {
-    justify-content: space-around;
-    -webkit-box-align: center;
-            align-items: center;
-    -webkit-box-ordinal-group: 2;
-            order: 1;
-}
-#compass {
-    -webkit-box-pack: start;
-            justify-content: flex-start;
-    padding-left: 20%;
-    -webkit-box-ordinal-group: 5;
-            order: 4;
-}
-
-#oculus {
-  -webkit-box-ordinal-group: 6;
-          order: 5;
-    -webkit-box-align: stretch;
-            align-items: stretch;
-}
-#locus {
-    -webkit-box-flex: 0;
-            flex: 0 2 65%;
-    -webkit-box-ordinal-group: 3;
-            order: 2;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-}
-#locus .phase {
-    -webkit-box-flex: 1;
-            flex: 1;
-    -webkit-box-flex: 1;
-            flex-grow: 1;
-    text-align: center;
-}
-#locus h5 {
-    font-weight: bold;
-}
-#focus {
-    -webkit-box-flex: 0;
-            flex: 0 1.2 35%;
-    -webkit-box-ordinal-group: 2;
-            order: 1;
-}
-#focus .details {
-    margin: auto;
-    text-align: justify;
-    padding: 2em;
-}
-#focus svg {
-    padding: 2em;
-}
-@media screen and (max-width: 767px) {
-    .viz--half {
-        -webkit-box-flex: 1;
-                flex: 1 0 100%;
-        align-self: stretch;
-        min-height: 100%;
-        height: 100%;
-        max-height: 100%;
-    }
-    #abacus {
-        -webkit-box-ordinal-group: 3;
-                order: 2;
-    }
-    #atlas {
-        -webkit-box-ordinal-group: 4;
-                order: 3;
-    }
-    #oculus {
-        -webkit-box-ordinal-group: 5;
-                order: 4;
-    }
-    #locus {
-        flex-wrap: wrap;
-        -webkit-box-ordinal-group: 2;
-                order: 1;
-        -webkit-box-pack: center;
-                justify-content: center;
-    }
-    #focus {
-        -webkit-box-ordinal-group: 3;
-                order: 2;
-    }
-}
-
-/*
- * Viz
- */
 .click-target {
     fill-opacity: 0;
     pointer-events: all;
 }
 .state {
-    -webkit-transition: opacity 0.5s ease;
     transition: opacity 0.5s ease;
     cursor: pointer;
 }
 .overlay {
-    -webkit-transition: opacity 0.5s ease;
     transition: opacity 0.5s ease;
     pointer-events: none;
 }
 .state > path {
-    -webkit-transition: fill 0.5s ease,
-        stroke 0.5s ease,
-        stroke-width 0.5s ease;
     transition:
         fill 0.5s ease,
         stroke 0.5s ease,
         stroke-width 0.5s ease;
+    stroke: azure;
+    stroke-width: 2px;
+}
+.clicked > path {
+    stroke: black;
 }
 .state-icon {
     opacity: 0.2;
@@ -146,89 +27,39 @@
 .soften {
     opacity: 0.2;
 }
+.soften > path {
+  fill: darkgrey;
+}
 .soften .overlay {
   opacity: 0;
 }
-.legend {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    -webkit-box-pack: start;
-            justify-content: flex-start;
-    align-content: space-between;
-}
 .legend-row {
-    -webkit-box-flex: 1;
-            flex: 1;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
     list-style-type: none;
-
-    -webkit-transition: all 0.5s ease-in-out,
-        opacity 0.3s ease-in-out;
-
     transition:
         all 0.5s ease-in-out,
         opacity 0.3s ease-in-out;
 }
 .legend-item {
-    -webkit-box-flex: 1;
-            flex: 1;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-            flex-direction: row;
-    -webkit-box-pack: start;
-            justify-content: flex-start;
-    align-content: space-between;
-
-    -webkit-transition: all 500ms linear;
-
     transition: all 500ms linear;
 }
 .legend-bar-container {
-    -webkit-box-flex: 1;
-            flex: 1;
-    -webkit-box-flex: 1;
-            flex-grow: 1;
-    flex-shrink: 1.5;
-    -webkit-box-ordinal-group: 2;
-            order: 1;
-    display: -webkit-inline-box;
-    display: inline-flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-            flex-direction: row-reverse;
     cursor: pointer;
-
+    padding-left: 0;
+    padding-right: 0.5em;
 }
 .legend-label-container {
-    -webkit-box-flex: 1;
-            flex: 1;
-    -webkit-box-flex: 1.5;
-            flex-grow: 1.5;
-    -webkit-box-ordinal-group: 3;
-            order: 2;
-    flex-wrap: nowrap;
     overflow: visible;
-            flex-shrink: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 .legend-bar {
     border: 1px solid white;
-
-    -webkit-transition: width 0.5s ease-in-out;
+    height: 100%;
+    float: right;
 
     transition: width 0.5s ease-in-out;
 }
 .kids {
-    -webkit-box-flex: 0;
-            flex: 0;
     padding: 0;
 }
 .legend-label--text {
@@ -253,26 +84,13 @@
 .legend-row--new {
     max-height: 0;
     opacity: 0;
-    -webkit-animation:
+    animation:
       openSpace 0.5s ease forwards,
       fadeIn 0.3s 0.2s ease forwards;
-            animation:
-      openSpace 0.5s ease forwards,
-      fadeIn 0.3s 0.2s ease forwards;
-}
-@-webkit-keyframes openSpace {
-    to {
-        max-height: 120px;
-    }
 }
 @keyframes openSpace {
     to {
         max-height: 120px;
-    }
-}
-@-webkit-keyframes fadeIn {
-    to {
-        opacity: 1;
     }
 }
 @keyframes fadeIn {
@@ -282,15 +100,8 @@
 }
 .legend-row--remove {
     max-height: 120px;
-    -webkit-animation:
+    animation:
       closeSpace 0.5s ease forwards;
-            animation:
-      closeSpace 0.5s ease forwards;
-}
-@-webkit-keyframes closeSpace {
-    to {
-        max-height: 0;
-    }
 }
 @keyframes closeSpace {
     to {
@@ -305,14 +116,12 @@ path.domain, .tick line {
     text-align: center;
 }
 #locus li {
-    -webkit-transition: background-color 0.5s ease,
-        color 0.5s ease,
-        opacity 0.5s linear;
     transition: background-color 0.5s ease,
         color 0.5s ease,
         opacity 0.5s linear;
 
     opacity: 0.25;
+    margin: 0 -1em;
 }
 #locus li.hilite {
     color: azure;
