--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         type="image/vnd.microsoft.icon"/>
 
     {% include shims.html %}
-    <link href="css/vendor/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <style>
       {% include critical_styles.css %}
     </style>
