Switch atlas from tellus tooltips to d3-tip.

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 ---
 @import "colors";
 @import "layout";
+@import "d3-tip";
 
 {% include_relative vendor/bootstrap.min.css %}
 {% include_relative vendor/font-awesome.min.css %}
