--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -120,10 +120,12 @@ path.domain, .tick line {
         color 0.5s ease,
         opacity 0.5s linear;
 
-    opacity: 0.25;
     margin: 0 -1em;
 }
-#locus li.hilite {
+#locus li span {
+    opacity: 0.25;
+}
+#locus li span.hilite {
     color: azure;
     opacity: 1;
 }
