Add google analytics template which will get automatically enabled whenever a google analytics tracking id gets entered.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <style>
       {% include critical_styles.css %}
     </style>
+		{% include google-analytics.html %}
   </head>
 
   <body id="page-top" class="index">
