Update project name and url

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -7,8 +7,8 @@
       </a> map of state judicial selection practices, part of the
       <a target="_blank" href="{{ site.organization.url }}/issues/fair-courts">
         Fair Courts Project’s
-      </a> investigation into <a target="_blank" href="{{ site.organization.url }}/judicial-selection-21st-century">
-        Judicial Selection for the 21st Century
+      </a> investigation into <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
+        Rethinking Judicial Selection
       </a>.
     </p>
   </div><!--.row-->
