missouri plan merit selection title change

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -50,7 +50,7 @@
     fill: #3f007d;
     background-color: #3f007d;
 }
-.missouri_plan {
+.missouri_plan_merit_selection {
     fill: #6a51a3;
     background-color: #6a51a3;
 }
