Link the @BrennanCenter logo to brennancenter.org

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
   <body id="page-top" class="index">
     <article>
       <div class="page-header text-center">
-        <img src="{{ site.organization.logo }}"
+        <a href="http://brennancenter.org/"><img src="{{ site.organization.logo }}"
           alt="Brennan Center for Justice at NYU"
           class="img-responsive center-block"
-        >
+        ></a>
       </div><!--.page-header-->
 
       <!-- Introduction -->
