Use a configuration item (logo_caption) for the logo img's alt text.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     <article>
       <div class="page-header text-center">
         <a href="http://brennancenter.org/"><img src="{{ site.organization.logo }}"
-          alt="Brennan Center for Justice at NYU"
+          alt="{{ site.organization.logo_caption }}"
           class="img-responsive center-block"
         ></a>
       </div><!--.page-header-->
