--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -2,12 +2,8 @@
   <div id="title" class="row text-center">
     <h1>{{ site.title }}</h1>
     <p class="lead">
-      Welcome to the <a target="_blank" href="{{ site.organization.url }}">
-        {{ site.organization.name }}’s
-      </a> map of state judicial selection practices, part of the
-      <a target="_blank" href="{{ site.organization.url }}/issues/fair-courts">
-        Fair Courts Project’s
-      </a> investigation into <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
+      A Fair Courts resource for
+       <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
         Rethinking Judicial Selection
       </a>.
     </p>
