--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -4,8 +4,7 @@
     <p class="lead">
       A Fair Courts resource for
        <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
-        Rethinking Judicial Selection
-      </a>.
+        Rethinking Judicial Selection</a>
     </p>
   </div><!--.row-->
   <div id="intro" class="row">
