--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -2,7 +2,7 @@
   <div id="title" class="row text-center">
     <h1>{{ site.title }}</h1>
     <p class="lead">
-      A Fair Courts resource for
+      A <a target="_blank" href="{{ site.organization.url }}/issues/fair-courts">Fair Courts</a> resource for
        <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
         Rethinking Judicial Selection</a>
     </p>
