--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -6,6 +6,17 @@
        <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
         Rethinking Judicial Selection</a>
     </p>
+    <p>
+        (This map does not yet reflect changes made in 2021 in Montana and Ohio)*
+    </p>
+    <p>
+        *As of March 16, 2021, the governor of Montana has authority to directly fill interim vacancies on the state’s supreme
+        court and district courts without vetting by the state’s judicial nominating commission.
+    </p>
+    <p>
+        As of September 30, 2021, candidates for the Ohio Supreme Court and the state’s intermediate appellate court run in
+        partisan general elections.
+    </p>
   </div><!--.row-->
   <div id="intro" class="row">
     {% for intro in site.introduction %}
