--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -133,6 +133,9 @@ footer {
     margin-top: 5em;
 }
 .disclaimer {
+    font-size: 14px;
+}
+.disclaimer-asterisk {
     font-size: 12px;
     font-style: italic;
 }
