--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -9,11 +9,11 @@
     <p class="disclaimer">
         (This map does not yet reflect changes made in 2021 in Montana and Ohio)*
     </p>
-    <p class="disclaimer">
+    <p class="disclaimer-asterisk">
         *As of March 16, 2021, the governor of Montana has authority to directly fill interim vacancies on the state’s supreme
         court and district courts without vetting by the state’s judicial nominating commission.
     </p>
-    <p class="disclaimer">
+    <p class="disclaimer-asterisk">
         As of September 30, 2021, candidates for the Ohio Supreme Court and the state’s intermediate appellate court run in
         partisan general elections.
     </p>
