--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -14,9 +14,8 @@
         court and district courts without vetting by the state’s judicial nominating commission.
     </p>
     <p class="disclaimer-asterisk">
-        As of September 30, 2021, candidates for the Ohio Supreme Court and the state’s intermediate appellate court run in
+        As of September 30, 2021, candidates for the Ohio Supreme Court and the state’s intermediate appellate courts run in
         partisan general elections.
-    </p>
   </div><!--.row-->
   <div id="intro" class="row">
     {% for intro in site.introduction %}
