WIP text styles (h1)

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,6 +1,6 @@
 <div id="introduction container-fluid">
   <div id="title" class="row text-center">
-    <h1>{{ site.title }}</h1>
+    <h1 class="page-info-header__title">{{ site.title }}</h1>
     <p class="lead">
       A <a target="_blank" href="{{ site.organization.url }}/issues/fair-courts">Fair Courts</a> resource for
        <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
