If not in an iframe, redirect to the map on www.brennancenter.org

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,13 @@
     <style>
       {% include critical_styles.css %}
     </style>
+		
+    <script>
+      if (window.self === window.top) {
+        window.location = 'https://www.brennancenter.org/judicial-selection-map';
+      }
+    </script>
+	  
 		{% include google-analytics.html %}
   </head>
 
