Ensure that we don't muck with local development.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     </style>
 		
     <script>
-      if (window.self === window.top) {
+      if (window.location.host == 'judicialselectionmap.brennancenter.org' && window.self === window.top) {
         window.location = 'https://www.brennancenter.org/judicial-selection-map';
       }
     </script>
