--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -6,6 +6,7 @@
        <a target="_blank" href="{{ site.organization.url }}/rethinking-judicial-selection">
         Rethinking Judicial Selection</a>
     </p>
+    <p class="disclaimer">Last Updated: September 30, 2022 </p>
   </div><!--.row-->
   <div id="intro" class="row">
     {% for intro in site.introduction %}
